--- a/web/css/irpane.css
+++ b/web/css/irpane.css
@@ -48,3 +48,48 @@
   border-collapse: collapse;
 }
 
+/** Styles for the floating panel used to display references. */
+.irpane-refs {
+  position: fixed;
+  font-size: 11px;
+  background-color: #ffffff;
+  z-index: 1010;
+  padding: 1px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.irpane-refs > div {
+  overflow-x: auto;
+  margin: 1px;
+  padding-left: 3px;
+  padding-bottom: 14px;
+}
+
+.irpane-refs > div::-webkit-scrollbar {
+  height: 4px;
+}
+
+.irpane-refs > div::-webkit-scrollbar-track {
+}
+
+.irpane-refs > div::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+}
+
+.irpane-refs .close {
+  line-height: 15px;
+  color: black;
+  padding-right: 3px;
+  font-size: 11px;
+}
