Keep the method list widget fully visible on the page and don't let it overflow.
Fix glitch in method list filtering: when filter input lost focus it would always recompute the list of methods even if the method list was already filtered with this filter.

Fix bug in the hydrogen preparser: deferred substring was captured with the wrong start position.

Fixes issue 6.

--- a/web/css/hydra.css
+++ b/web/css/hydra.css
@@ -77,4 +77,22 @@ pre.lir-line {
   cursor: pointer;
 }
 
+#methods {
+  overflow: auto;
+}
+
+#methods::-webkit-scrollbar {
+  height: 8px;
+  width: 8px;
+}
+
+#methods::-webkit-scrollbar-track,
+#methods::-webkit-scrollbar-corner {
+  background: inherit;
+}
+
+#methods::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.4);
+  border-radius: 5px;
+}
 
