--- a/web/css/hydra.css
+++ b/web/css/hydra.css
@@ -81,3 +81,26 @@ span.lir-env, span.lir-map { display: none; }
   margin-bottom: 500px;
 }
 
+.inline-marker {
+  cursor: pointer;
+  z-index: 1000;
+  color: #428bca;
+}
+
+.inline-marker:hover {
+  color: #2a6496;
+}
+
+.deopt-marker {
+  cursor: pointer;
+  z-index: 1000;
+  color: #C0392B;
+}
+
+.deopt-marker:hover {
+  color: #E74C3C;
+}
+
+.CodeMirror {
+  font-size: 16pt;
+}
