Refactor main application view: make top navigation bar always present (not a part of the pane), and side bar a part of the pain and don't display it until methods are loaded. Move some styles into main CSS to avoid duplication between files.

--- a/web/css/hydra.css
+++ b/web/css/hydra.css
@@ -194,11 +194,12 @@ h4.deopt-header-soft > .first-word {
 
 #welcome-splash {
   position: absolute;
-  padding-left: 250px;
   left: 0px;
   right: 0px;
-  top: 0px;
+  top: 40px;
   bottom: 0px;
+  z-index: 1000;
+  overflow: auto;
 }
 
 #splash-spinner {
