--- a/web/css/hydra.css
+++ b/web/css/hydra.css
@@ -1,45 +1,17 @@
-.sidebar-nav {
-  padding: 9px 0;
-}
-pre { white-space: pre; }
-
-span.boldy {
-  font-weight: bold;
-  line-height: 18px !important;
-}
-
-pre.highlighted-instruction {
-  background: rgba(255, 255, 0, 0.4) !important;
-}
-
-.hir-constant, .native-code-constant {
-  color: purple;
-}
-
-span.hir-range, span.hir-type, span.hir-changes, span.lir-env, span.lir-map {
-  color: rgba(0, 0, 0, 0.25);
-}
-span.hir-changes-all {
-  color: red;
-}
-
-span.lir-env, span.lir-map { display: none; }
-
-.lir-line {
-  background: rgba(125, 167, 217, 0.15) !important;
-}
-
-.native-code > td {
-  background: rgba(125, 167, 217, 0.05) !important;
-  font-size: 0.9em;
-}
-
-.highlight-ref {
-  background: gold;
+.brand {
+  font-family: 'Roboto';
 }
 
 #ir-pane {
   background: white;
+}
+  
+#graph-pane {
+  margin-bottom: 500px;
+}
+
+.sidebar-nav {
+  padding: 9px 0;
 }
 
 .xref .tooltip-inner {
@@ -48,10 +20,6 @@ span.lir-env, span.lir-map { display: none; }
 
 .tooltip.in.xref {
   opacity: 1 !important;
-}
-
-.brand {
-  font-family: 'Roboto';
 }
 
 .tooltip.xref pre {
@@ -69,41 +37,9 @@ span.lir-env, span.lir-map { display: none; }
   color: inherit;
 }
 
-.popover.xref, .popover.deopt {
+.popover.xref,
+.popover.deopt {
   max-width: 500px !important;
-}
-
-.deopt-marker, .deopt-marker:hover {
-  color: white;
-  cursor: pointer;
-}
-
-.deopt-marker-eager {
-  background-color: #C0392B;
-}
-
-.deopt-marker-eager:hover {
-  background-color: #E74C3C;
-}
-
-.deopt-marker-lazy {
-  background-color: #F39C12;
-}
-
-.deopt-marker-lazy:hover {
-  background-color: #F1C40F;
-}
-
-.deopt-marker-soft {
-  background-color: #8E44AD;
-}
-
-.deopt-marker-soft:hover {
-  background-color: #9B59B6;
-}
-
-#graph-pane {
-  margin-bottom: 500px;
 }
 
 .popover.deopt > .popover-content > pre {
@@ -132,17 +68,16 @@ h4.deopt-header-soft > .first-word {
 
 .welcome-message {
   font-family: 'Lato';
-}
-
-.welcome-message h1, .welcome-message h2, .welcome-message h3 {
-  font-family: 'Oswald';
-}
-
-.welcome-message {
   margin: 0 auto;
   width: 600px;
   font-size: 16px;
   padding: 5em 0;
+}
+
+.welcome-message h1,
+.welcome-message h2,
+.welcome-message h3 {
+  font-family: 'Oswald';
 }
 
 .alpha-warning {
@@ -185,17 +120,4 @@ h4.deopt-header-soft > .first-word {
   font-size: inherit;
   color: inherit;
   background: inherit;
-}
-
-.label {
-  display: inline;
-  padding: .2em .6em .3em;
-  font-size: 75%;
-  font-weight: bold;
-  line-height: 1;
-  color: #ffffff;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: baseline;
-  border-radius: .25em;
 }
