--- a/lib/src/ui/ir-pane.css
+++ b/lib/src/ui/ir-pane.css
@@ -197,3 +197,58 @@ pre {
   background-color: #9B59B6;
 }
 
+.block-header td {
+  padding-top: 0.5em !important;
+}
+
+.irpane.view-source tr.not-interesting {
+  display: none;
+}
+
+.irpane:not(.view-source) tr.source-line {
+  display: none;
+}
+
+/*
+.irpane > tr.loop-1 > td:last-child {
+  padding-left: 10px;
+}
+
+.irpane > tr.loop-2 > td:last-child {
+  padding-left: 15px;
+}
+
+.irpane > tr.loop-3 > td:last-child {
+  padding-left: 20px;
+}
+
+.irpane > tr.loop-4 > td:last-child {
+  padding-left: 25px;
+}
+
+.irpane > tr.loop-5 > td:last-child {
+  padding-left: 30px;
+}*/
+
+
+.irpane > tr.loop-hotness-1 > td:last-child > pre {
+  border-left: 8px #fee5d9 solid;
+}
+
+.irpane > tr.loop-hotness-2 > td:last-child > pre {
+  border-left: 8px #fcae91 solid;
+}
+
+.irpane > tr.loop-hotness-3 > td:last-child > pre {
+  border-left: 8px #fb6a4a solid;
+}
+
+.irpane > tr.loop-hotness-4 > td:last-child > pre {
+  border-left: 8px #de2d26 solid;
+}
+
+.irpane > tr.loop-hotness-5 > td:last-child > pre {
+  border-left: 8px #a50f15 solid;
+}
+
+
