--- a/web/css/hydra.css
+++ b/web/css/hydra.css
@@ -32,7 +32,7 @@
   padding: 0;
   background: transparent;
   font-family: monospace;
-  font-size: inherit;
+  font-size: 18pt;
   word-wrap: normal;
   color: inherit;
 }
