--- a/lib/src/ui/method-list.scss
+++ b/lib/src/ui/method-list.scss
@@ -75,6 +75,7 @@
   color: inherit;
 }
 
+.nav > li > h3.selected > a,
 .nav > li > h3 > a:hover,
 .nav > li > h3 > a:focus {
   text-decoration: none;
@@ -88,6 +89,7 @@
   padding: 2px 15px;
 }
 
+.phases > li.selected > a,
 .phases > li > a:hover,
 .phases > li > a:focus {
   text-decoration: none;
