Add support for .tar.bz2 demos and add WebRebels 2014 demos

--- a/lib/src/ui/hydra.scss
+++ b/lib/src/ui/hydra.scss
@@ -12,6 +12,18 @@
   flex-flow: column;
 }
 
+paper-toast, paper-toast /deep/ div {
+  z-index: 1000 !important;
+}
+
+paper-toast > paper-progress {
+  position: absolute;
+  left: 5%;
+  right: 24px;
+  bottom: 5px;
+  width: 90%;
+}
+
 .header {
   height: 40px;
   padding: 0px;
