--- a/lib/src/ui/source-path.scss
+++ b/lib/src/ui/source-path.scss
@@ -24,3 +24,17 @@
 .source-path a:hover {
   color: #2a6496;
 }
+
+.fa {
+  display: inline-block;
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.fa-angle-double-right:before{
+  content:"\f101"
+}
