--- a/web/css/hydra.css
+++ b/web/css/hydra.css
@@ -16,10 +16,24 @@
 
 .xref .tooltip-inner {
   max-width: 100% !important;
+  background-color: white !important;
+  border: 2px solid #bf360c !important;
 }
 
 .tooltip.in.xref {
   opacity: 1 !important;
+}
+
+.tooltip.bottom.xref {
+  padding: 10px !important;
+}
+
+
+.tooltip.bottom.xref .tooltip-arrow {
+  border-bottom-color: #bf360c !important;
+  margin-left: -10px;
+  border-bottom-color: #000;
+  border-width: 0 10px 10px;
 }
 
 .tooltip.xref pre {
@@ -32,9 +46,9 @@
   padding: 0;
   background: transparent;
   font-family: monospace;
-  font-size: 12pt;
+  font-size: 20pt;
   word-wrap: normal;
-  color: inherit;
+  /* color: inherit; */
 }
 
 .popover.xref,
