Revert accidentally pushed design changed.
This reverts part of the commit
2893c73a945d545733c63469933b2530d103ad73.

--- a/web/bootstrap/css/bootstrap.css
+++ b/web/bootstrap/css/bootstrap.css
@@ -6161,7 +6161,7 @@ button.close {
   color: #ffffff;
   text-align: center;
   text-decoration: none;
-  background-color: white; /* #000000 */
+  background-color: #000000;
   border-radius: 4px;
 }
 
