--- a/lib/src/ui/method-name.scss
+++ b/lib/src/ui/method-name.scss
@@ -29,6 +29,11 @@ a:focus {
   font-weight: 500 !important;
 }
 
+.deopt-debugger {
+  color: #827717;
+  font-weight: 500 !important;
+}
+
 .deopt-soft {
   color: #8E44AD;
   font-weight: 500 !important;
