Move more ui utilities into ui_utils package

--- a/ui_utils/lib/components/graph-pane.html
+++ b/ui_utils/lib/components/graph-pane.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<link rel="import" href="../../../../packages/polymer/polymer.html">
-<link rel="import" href="../../../../packages/core_elements/core_overlay.html">
+<link rel="import" href="../../../packages/polymer/polymer.html">
+<link rel="import" href="../../../packages/core_elements/core_overlay.html">
 <polymer-element name="graph-pane">
   <template>
     <style>
