[saga] account for intereference for renaming
- fix invalidation for NodeComponent and BlockComponent
- add jol output to loads.dart

--- a/saga/web/styles.css
+++ b/saga/web/styles.css
@@ -140,6 +140,11 @@ pre {
   margin-right: auto;
 }
 
+.invalid-name {
+  color: #dc322f;
+  font-weight: bold;
+}
+
 .tooltip-def {
   font-size: 0.95em;
   font-style: italic;  
